syntax = "proto3";

package kuma.mesh.v1alpha1;

option go_package = "github.com/kumahq/kuma/api/mesh/v1alpha1";

import "google/protobuf/timestamp.proto";
import "envoy/api/v2/discovery.proto";
import "google/protobuf/any.proto";

service KumaDiscoveryService {

  rpc DeltaKumaResources(stream envoy.api.v2.DeltaDiscoveryRequest)
      returns (stream envoy.api.v2.DeltaDiscoveryResponse);

  rpc StreamKumaResources(stream envoy.api.v2.DiscoveryRequest)
      returns (stream envoy.api.v2.DiscoveryResponse);

  rpc FetchKumaResources(envoy.api.v2.DiscoveryRequest)
      returns (envoy.api.v2.DiscoveryResponse);
}

message KumaResource {
  message Meta {
    string name = 1;
    string mesh = 2;
    google.protobuf.Timestamp creation_time = 3;
    google.protobuf.Timestamp modification_time = 4;
    string version = 5;
  }
  Meta meta = 1;
  google.protobuf.Any spec = 2;
}
